--- a/conf/credentials.yaml.template
+++ b/conf/credentials.yaml.template
@@ -2,6 +2,9 @@ default:
     username: admin
     password: password
     email: admin@example.com
+bugzilla:
+    username: john.doe@company.test
+    password: password
 rhevm31:
     username: admin
     password: password
