Set alert-related capability (FF and IE only)

--- a/conf/env.yaml.template
+++ b/conf/env.yaml.template
@@ -5,3 +5,4 @@ browser:
         desired_capabilities:
             platform: LINUX
             browserName: 'chrome'
+            unexpectedAlertBehaviour: 'ignore'
