--- a/conf/credentials.yaml.template
+++ b/conf/credentials.yaml.template
@@ -26,6 +26,9 @@ ipmi:
 ssh:
     username: root
     password: password
+netapp-storage:
+    username: root
+    password: letmein
 database:
     username: root
     password: password
