Test for ManageIQ/manageiq:266
* Check that Add button is disabled with no group filled
* One small fix that caused github plugin was still on
* Move GH credentials into env

--- a/conf/env.yaml.template
+++ b/conf/env.yaml.template
@@ -6,3 +6,6 @@ browser:
             platform: LINUX
             browserName: 'chrome'
             unexpectedAlertBehaviour: 'ignore'
+github:
+    default_repo: foo/bar
+    token: abcdef0123456789
