--- a/conf/cfme_data.yaml.template
+++ b/conf/cfme_data.yaml.template
@@ -116,6 +116,7 @@ management_systems:
         credentials: rhos
         server_zone: default
         type: openstack
+        network: defaultnetwork
         test_vm_power_control:
             - pwr-ctl-vm-1-dnd
 management_hosts:
@@ -130,6 +131,11 @@ management_hosts:
         user_assigned_os: VMware ESX
 appliance_provisioning:
     provider: provider_name
+    default_flavors:
+        ec2:
+            - m3.medium
+        openstack:
+            - m1.medium
     versions:
         1.2.3: template_name_123
         1.3.3: template_name_133
