--- a/conf/ui_bench_tests.yaml.template
+++ b/conf/ui_bench_tests.yaml.template
@@ -1,7 +1,9 @@
 page_check:
     num_ems_infra_check: 20
+    num_ems_cluster_check: 5
     num_host_infra_check: 20
     num_vm_infra_check: 50
+    num_ems_resource_pool_check: 5
     num_storage_check: 20
 threshold:
     page_render: 5000
