--- a/conf/cfme_data.yaml.template
+++ b/conf/cfme_data.yaml.template
@@ -130,7 +130,7 @@ management_hosts:
         ipmi_credentials: ipmi
         user_assigned_os: VMware ESX
 appliance_provisioning:
-    provider: provider_name
+    default_provider: provider_name
     default_flavors:
         ec2:
             - m3.medium
