--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ boto
 bottle
 bottle-sqlite
 docker-py
-execnet
 flake8
 functools32
 function_trace
@@ -44,5 +43,5 @@ lxml
 # Postgres client bindings, needs postgresql-devel
 psycopg2
 
-# zeromq bindings, for ipython, needs zeromq3-devel
+# zeromq bindings, for ipython and parallel testing, needs zeromq3-devel
 pyzmq
