Provision test cleanup

--- a/data/rhel6-iso.cfg
+++ b/data/rhel6-iso.cfg
@@ -5,12 +5,12 @@
   os_ver                  = "RHEL 6.5 Server"
   rhev_agent_url          = "$url1/$file1"
   root_fallback_password  = "testing" # Fallback root password if the dialog was blank
-  
+
   # Account for some missing values
   evm[:root_password]  = root_fallback_password if evm[:root_password].blank?
   evm[:hostname]       = evm[:vm_target_hostname] if evm[:hostname].blank?
   evm[:addr_mode]      = ['dhcp'] if evm[:ip_addr].blank? || evm[:subnet_mask].blank? || evm[:gateway].blank?
-  
+
   # Dynamically create the network string based on values from the dialog
   if evm[:addr_mode].first == 'static'
     network_string = "network --onboot yes --bootproto=static --noipv6"
@@ -74,6 +74,8 @@ rootpw --iscrypted <%= MiqPassword.md5crypt(evm[:root_password]) %>
 ### Post Install Scripts
 %post --log=/root/ks-post.log
 
+dhclient
+
 # Register to RHN or Download locally and Install RHEV Agent
 <% if rhn_activation_key.blank? %>
   wget <%= rhev_agent_url %>
@@ -89,30 +91,17 @@ rootpw --iscrypted <%= MiqPassword.md5crypt(evm[:root_password]) %>
 
 # Callback to EVM during post-install
 wget --no-check-certificate <%= evm[:post_install_callback_url] %>
-
 %end
 
 
 ### Server Packages
 %packages
 @base
-@console-internet
 @core
-@debugging
-@hardware-monitoring
-@large-systems
-@network-file-system-client
-@performance
-@perl-runtime
-@server-platform
-@server-policy
-pax
-oddjob
-sgpio
-certmonger
-pam_krb5
-krb5-workstation
-perl-DBD-SQLite
+xorg-x11-xauth
+nfs-utils
+autofs
+
 %end
 
 
