--- a/data/rhel6.cfg
+++ b/data/rhel6.cfg
@@ -68,7 +68,6 @@ repo --name=rhel-x86_64-server-optional-6 --baseurl=$url3
 %packages
 @base
 @core
-screen
 xorg-x11-xauth
 nfs-utils
 autofs
@@ -77,6 +76,9 @@ autofs
 
 %post
 # Register to RHN or Download locally and Install RHEV Agent
+
+dhclient
+
 <% if rhn_activation_key.blank? %>
   wget <%= rhev_agent_url %>
   rpm -ivh $file1
@@ -86,5 +88,5 @@ autofs
 <% end %>
 
 #Callback to CFME during post-install
-wget --no-check-certificate <%=evm[:callback_url_on_post_install] %>
+wget --no-check-certificate <%=evm[:post_install_callback_url] %>
 %end
