--- a/sprout/Procfile
+++ b/sprout/Procfile
@@ -1,4 +1,4 @@
 memcached:              memcached -l localhost -p $MEMCACHED_PORT
 worker:                 PYTHONPATH="`pwd`:$PYTHONPATH" ./celery_runner worker --app=sprout.celery:app --concurrency=$CELERY_MAX_WORKERS --loglevel=INFO -Ofair
 celery_monitor:         PYTHONPATH="`pwd`:$PYTHONPATH" ./celery_runner flower --app=sprout.celery:app
-django:                 gunicorn --preload --bind localhost:$DJANGO_PORT -w 4 sprout.wsgi:application
+django:                 gunicorn --preload --bind localhost:$DJANGO_PORT -w 4 --access-logfile access.log --error-logfile error.log sprout.wsgi:application
