Sprout managing script revamp

--- a/sprout/.env
+++ b/sprout/.env
@@ -1,6 +1,7 @@
-DJANGO_PORT=8000
-REDIS_PORT=6379
-MEMCACHED_PORT=23156
-REDIS_DB_ID=0
-REDIS_RESULT_DB_ID=1
-CELERY_MAX_WORKERS=12
+export DJANGO_PORT=8000
+export REDIS_PORT=6379
+export MEMCACHED_PORT=23156
+export REDIS_DB_ID=0
+export REDIS_RESULT_DB_ID=1
+export CELERY_MAX_WORKERS=12
+export GUNICORN_WORKERS=4
