Enable VPN connection into providers with internal network

--- a/conf/cfme_data.yaml.template
+++ b/conf/cfme_data.yaml.template
@@ -1,4 +1,5 @@
 basic_info:
+    epel: http://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
     app_version: 5.2.0
 bugzilla:
     url: http://bugzilla.example.test/xmlrpc.cgi
