--- a/sprout/requirements.txt
+++ b/sprout/requirements.txt
@@ -1,8 +1,8 @@
 -r ../requirements.txt
-Django
+Django>=1.8
 django-object-actions
 celery[redis]<3.2
 python-memcached
 flower
 gunicorn
-Runner
+Command
