--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ pygal
 PyGithub
 PyPDF2
 pytest
--e git://git.fedorahosted.org/git/python-bugzilla@210a086454f523095c3fc1736cc96e0bb8ca1260#egg=python-bugzilla
+python-bugzilla>=1.2.0
 python-cinderclient
 python-dateutil
 python-keystoneclient
