Updates to dockerfile for dev, framework handling of dev appliance
pytest_store handling of no SSH client address
dockerignore for pytest_cache
iputils and iproute in quickstart system packages
SSHDummy property handling, explicitly None
building cfme-tests docker on cfmeqe_sel_stable

--- a/conf/env.yaml.template
+++ b/conf/env.yaml.template
@@ -8,7 +8,7 @@ browser:
             browserName: 'chrome'
             unexpectedAlertBehaviour: 'ignore'
 github:
-    default_repo: foo/bar
+    default_repo: manageiq/integration_tests
     token: abcdef0123456789
 bugzilla:
     url: https://bugzilla.redhat.com/xmlrpc.cgi
