Move tier and requirement markers out of fixtures
Add customer-scenario filter and marker
register the markers
default customerscenario
update pytest-polarion-collect and other polarion packages

Remove test injection from test_advanced_search, for meta

The polarion meta was not correctly parsed, and with updates to pytest-polarion-collect and polarion_docstrings, the unmerged docstrings are causing exceptions and failures during collection.

Go to boilerplate for this test module, until the meta processing is resolved.

Update smem to run with python2 explicitly

--- a/conf/polarion_tools.yaml
+++ b/conf/polarion_tools.yaml
@@ -7,7 +7,7 @@ default_fields:
     caseimportance: high
     caselevel: component
     caseposneg: positive
-    customerscenario: ""
+    customerscenario: false
     description: ""
     endsin: ""
     expectedResults: ""
@@ -63,6 +63,7 @@ docstrings:
     marker_fields:
         caselevel: "@pytest.mark.tier"
         caseautomation: "@pytest.mark.manual"
+        customerscenario: "@pytest.mark.customer_scenario"
         # default for manual mark is 'notautomated'
         # @pytest.mark.manual('manualonly') to set 'manualonly'
         linkedWorkItems: "@pytest.mark.requirements"
