--- a/conf/polarion_tools.yaml
+++ b/conf/polarion_tools.yaml
@@ -102,6 +102,7 @@ docstrings:
             - CandU
             - CustomButton
             - Cloud
+            - CloudIntegration
             - Configuration
             - Containers
             - Control
