--- a/conf/polarion_tools.yaml
+++ b/conf/polarion_tools.yaml
@@ -1,5 +1,7 @@
 default_fields:
     arch: ""
+    approver-ids: "mshriver akarol smallamp jkrocil rhcf3_machine:approved"
+    status-id: "approved"
     assignee: ""
     automation_script: ""
     caseautomation: automated
@@ -29,6 +31,10 @@ default_fields:
     title: ""
     upstream: ""
     work_item_id: ""
+
+requirements_default_fields:
+    approver-ids: "mshriver akarol smallamp jkrocil rhcf3_machine:approved"
+    status-id: "approved"
 
 custom_fields:
     - arch
