Update polarion-docstrings and travis
Update polarion-docstring 0.20

Update travis config to clean pre-commit, ignore P663

Fix polarion meta

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,10 +35,9 @@ jobs:
       python: '3.7'
       env:
       install:
-      - pip3 install pre-commit flake8
-      - pip3 install polarion-docstrings
-      - pre-commit install-hooks
+      - pip install pre-commit flake8
       script:
+      - pre-commit clean
       - pre-commit run --all-files
       after_failure:
       - git diff
