--- a/setup.cfg
+++ b/setup.cfg
@@ -13,5 +13,8 @@ entry_points = file:entry_points.txt
 exclude = cfme.tests
 
 [flake8]
-ignore = E128,E811,W503,W504,P665
+# P663 is bad indentation
+# https://gitlab.com/mkourim/polarion_docstrings/issues/1
+# erroneous failures, ignore it for now
+ignore = E128,E811,W503,W504,P663
 max-line-length = 100
