Adding ability to access different files from conf

--- a/conf/env.yaml.template
+++ b/conf/env.yaml.template
@@ -1,24 +1,25 @@
-appliances:
-    - hostname: 10.11.12.13
-browser:
-    webdriver: Remote
-    webdriver_options:
-        desired_capabilities:
-            platform: LINUX
-            browserName: 'chrome'
-            unexpectedAlertBehaviour: 'ignore'
-github:
-    default_repo: foo/bar
-    token: abcdef0123456789
-bugzilla:
-    url: https://bugzilla.redhat.com/xmlrpc.cgi
-    loose:  # Params of BugzillaBug to be converted to LooseVersion at runtime
-        - target_release
-        - version
-        - fixed_in
-    upstream_version: "master"
-    credentials: cred_file_key
-    skip:  # Bug states that are considered for skipping (not used now but will be incorporated later)
-        - ON_DEV
-        - NEW
-        - ASSIGNED
+env:
+    appliances:
+        - hostname: 10.11.12.13
+    browser:
+        webdriver: Remote
+        webdriver_options:
+            desired_capabilities:
+                platform: LINUX
+                browserName: 'chrome'
+                unexpectedAlertBehaviour: 'ignore'
+    github:
+        default_repo: foo/bar
+        token: abcdef0123456789
+    bugzilla:
+        url: https://bugzilla.redhat.com/xmlrpc.cgi
+        loose:  # Params of BugzillaBug to be converted to LooseVersion at runtime
+            - target_release
+            - version
+            - fixed_in
+        upstream_version: "master"
+        credentials: cred_file_key
+        skip:  # Bug states that are considered for skipping (not used now but will be incorporated later)
+            - ON_DEV
+            - NEW
+            - ASSIGNED
